# dbt_duckdb_devcontainer

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
src/: pyproject.toml
src/dbt_duckdb_devcontainer/: Makefile  dbt_project.yml  profiles.yml
src/dbt_duckdb_devcontainer/models/source/: events.sql
src/jupyter/: dbt.ipynb
