[tool.poetry]
name = "dbt-duckdb-container"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.8.7"
dbt-duckdb = "^1.8.4"
pandas = "^2.2.3"
notebook = "^7.2.1"
jupyterlab = "^4.2.4"
jupysql = "^0.10.12"
matplotlib = "^3.9.0"
duckdb-engine = "^0.13.1"
ipykernel = "^6.29.5"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
